# simons-parser

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  chat.txt  flake.nix  justfile
.github/workflows/: ci-nix.yml
src/: combinators.rs  error.rs  input.rs  lib.rs  parser.rs  text.rs
tests/: applicative_examples.rs  basic_parsing.rs  combinators.rs  text_parsing.rs
